<?xml version="1.0"?>
<package>
  <name>hw2</name>
  <version>1.0.0</version>
  <description>joystick to roomba</description>

  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
